Tst/Tests/New/Neg/While/WhileNondet2.p
main machine Entry {
    var i:int;

    start state init {
        entry {
            while ( $ ) {
                assert(false);
            }
        }
    }
}
